# csconfig

./: .gitignore  CMakeLists.txt  Makefile  README.md  backup.bat  compile.bat  debug.bat  release.bat
exec/: main.cc
release/: debug_log.txt  log.txt
src/: ctrl.cc
src/bash/: bash.cc  bash.h
src/cmd/: bash.cc  bash.h  cmd.h  ui.cc  ui.h
src/config/: aliases.cc  args.cc  binds.cc  buffer.cc  config.cc  config.h
src/constant/: const.cc  const.h  exceptions.cc  exceptions.h
src/control/: ctrl.cc  ctrl.h
src/exceptions/: exceptions.cc  exceptions.h
src/other/: fileio.cc  fileio.h  global.cc  global.h
